youfull/objects/Market_Action_Items__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item__c</fullName>
        <label>Action Item</label>
        <referenceTo>Action_Items__c</referenceTo>
        <relationshipLabel>Market Action Items</relationshipLabel>
        <relationshipName>Market_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Stage__c</fullName>
        <label>Campaign Stage</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>Next</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_Param__c</fullName>
        <label>Filter Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Market Action Items</relationshipLabel>
        <relationshipName>Market_Action_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <referenceTo>Report_Config__c</referenceTo>
        <relationshipLabel>Market Action Items</relationshipLabel>
        <relationshipName>Market_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Threshold</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Market Action Item</label>
    <nameField>
        <displayFormat>MAI-{000000}</displayFormat>
        <label>Market Action Items Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>